--- a/docker-compose/23.N-docker-compose.yml
+++ b/docker-compose/23.N-docker-compose.yml
@@ -135,14 +135,11 @@ services:
       - xpack.security.enabled=false
       - discovery.type=single-node
     ulimits:
-      memlock:
-        soft: -1
-        hard: -1
       nofile:
         soft: 65536
         hard: 65536
-    cap_add:
-      - IPC_LOCK
+   # cap_add:
+   #   - IPC_LOCK
     ports:
       - 9200:9200
       - 9300:9300
